# AutoQiita

./: .env.example  .gitignore  ALIAS_FIX_GUIDE.md  Makefile  README.md  SETUP.md  __init__.py  article_draft.md  config.py  content_processor.py  end.sh  extension_manager.py  fix_bashrc.sh  install_global.sh  main.py  mcp_server.py  multi_workspace.py  posting_guide.md  pyproject.toml  qiita_client.py  security_scanner.py  setup.sh  shell_aliases.sh  test_aliases.sh  vscode_integration.sh  workspaces.json
autoqiita/: cli.py  file_monitor.py
config/: security_rules.json  settings.json  watched_extensions.json
vscode_extension/: package-lock.json  package.json  tsconfig.json
vscode_extension/src/: autoqiitaClient.ts  extension.ts
